correction contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -248,13 +248,14 @@ p {
   position: absolute;
   bottom: 15px;
   right: 10px;
-  background-color: #28a745;
+  background-color: #218838;
   color: white;
   font-size: 0.75rem;
   padding: 4px 8px;
   border-radius: 9999px;
   font-weight: 600;
   z-index: 2;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.7);
 }
 
 .demo-image img {
